--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:zXxtAAvy1fSzXII+LN8ecBZbkmcQNsQ10necZx1xcBo=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -10,10 +10,10 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
+DB_PORT=3307
+DB_DATABASE=db_teste
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=usbw
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
